# sdfsdrfdsfgdfgdf

./: README.md  main.py  pyproject.toml
src/data/: data_actions.py  forms.py
src/templates/: _base.html  _navigation.html  cabinet.html  departure.html  index.html  login.html  product.html  signup.html
